tried to create multiline output

--- a/AITerror/templates/AITerror/index.html
+++ b/AITerror/templates/AITerror/index.html
@@ -289,7 +289,7 @@
                 <p id="output" class="mbr-section-subtitle mbr-fonts-style mt-4 display-7">
                    ...
                 </p>
-                <div id="explanation"></div>
+                <div id="explanation" style="word-wrap: break-word; white-space: normal; width: 100%;"></div>
             </div>
         </div>
     </div>
